CKAD/security/d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: d1
  name: d1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: d1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: d1
    spec:
      containers:
      - command:
        - sh
        - -c
        - sleep 1d
        image: busybox
        name: d1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
