CKAD/security/pod-using-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sec-pod
  name: sec-pod
spec:
  containers:
  - command:
    - sh
    - -c
    - sleep 1d
    image: busybox
    name: sec-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
